added forgout and swagger
